fix: Switch CORS to pattern-based matching for Cloudflare HTTPS
- Changed from setAllowedOrigins() to setAllowedOriginPatterns()
- Added https://alex-dyakin.com and https://*.alex-dyakin.com patterns
- Maintains backward compatibility with PlayIt HTTP URLs
- Verified with curl preflight tests